# libdio

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CmakeLists.txt  Makefile  README.md
.github/workflows/: checking.yaml  formatting.yaml  update_tag.yaml
example/: main.cpp
include/: display.h  input.h
include/libdio/: display.h  display.tpp  input.h
src/: display.cpp  display.tpp  input.cpp  input.h  input.tpp
